<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TrackerActivity" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="56dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_corners_tl_tr"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <View
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corners_all" />

            <TextView
                android:id="@+id/tv_pull"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pull_me_up"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/provided_data"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/llTotalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llInfected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/infections"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_infected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:textAlignment="center"
                        android:textColor="#FF9800"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDeath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/death"
                        android:textAlignment="center"
                        android:textColor="#FF0000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:textAlignment="center"
                        android:textColor="#FF0000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/heal"
                        android:textAlignment="center"
                        android:textColor="#20BE25"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:textAlignment="center"
                        android:textColor="#20BE25"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>