<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".FirstFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llTotalData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llInfected"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:minLines="1"
                            android:text="@string/infections"
                            android:textAlignment="center"
                            android:textColor="#FF9800"
                            android:textSize="16sp"
                            app:autoSizeMaxTextSize="20sp"
                            app:autoSizeMinTextSize="10sp" />

                        <TextView
                            android:id="@+id/tv_infected"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:minLines="1"
                            android:textAlignment="center"
                            android:textColor="#FF9800"
                            android:textSize="16sp"
                            app:autoSizeMaxTextSize="20sp"
                            app:autoSizeMinTextSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llDeath"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:minLines="1"
                            android:text="@string/death"
                            android:textAlignment="center"
                            android:textColor="#FF0000"
                            android:textSize="16sp"
                            app:autoSizeMaxTextSize="20sp"
                            app:autoSizeMinTextSize="10sp" />

                        <TextView
                            android:id="@+id/tv_death"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:minLines="1"
                            android:textAlignment="center"
                            android:textColor="#FF0000"
                            android:textSize="16sp"
                            app:autoSizeMaxTextSize="20sp"
                            app:autoSizeMinTextSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:minLines="1"
                            android:text="@string/heal"
                            android:textAlignment="center"
                            android:textColor="#20BE25"
                            android:textSize="16sp"
                            app:autoSizeMaxTextSize="20sp"
                            app:autoSizeMinTextSize="10sp" />

                        <TextView
                            android:id="@+id/tv_recovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:minLines="1"
                            android:textAlignment="center"
                            android:textColor="#20BE25"
                            android:textSize="16sp"
                            app:autoSizeMaxTextSize="20sp"
                            app:autoSizeMinTextSize="10sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/recover"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:visibility="gone"
                    android:layout_marginBottom="15dp"
                    android:title="@string/heal"
                    app:seriesColor="#20BE25"
                    app:seriesTitle="@string/heal"
                    app:seriesType="line" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/infec"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:visibility="gone"
                    android:layout_marginBottom="15dp"
                    android:title="@string/infections"
                    app:seriesColor="#FF9800"
                    app:seriesTitle="@string/infections"
                    app:seriesType="line" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/dea"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:visibility="gone"
                    android:layout_marginBottom="15dp"
                    android:title="@string/death"
                    app:seriesColor="#FF0000"
                    app:seriesTitle="@string/death"
                    app:seriesType="line" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
